# tab_opt

./: .gitignore  README.md  env.yaml  pyproject.toml  setup.py
notebooks/: FFT_Convolve.ipynb  FFT_Matrix_Formulation.ipynb  Fisher_VP_Diag_Testing.ipynb  GP_Example_Numpyro.ipynb  Image_MS.ipynb  JAX_Register_PyTree.ipynb  Nifty_Test.ipynb  NumPyro_Testing_Arb_Model.ipynb  Numpyro_AdaBelief.ipynb  Numpyro_IFT.ipynb  Numpyro_MGVI.ipynb  Orbit_Deviation_Check.ipynb  Power_Law_Sky_Model.ipynb  Primary_Beam_Investigation.ipynb  Real_FFT.ipynb  Sampling_Model.ipynb  Sampling_from_Precision.ipynb  Satellite_Separation.ipynb  Satellite_Testing.ipynb  Test_Optax.ipynb  Test_Optax_Compressed.ipynb  Visibility_Averaging_Tests.ipynb  Write_to_MS.ipynb  Xarray_Data_loading.ipynb  tab_II_matrix_formulation_baselines.ipynb  tab_II_multi_satellite.ipynb  tab_II_real_data.ipynb  tab_II_satellite.ipynb  tab_II_satellite_baselines_indepe-Copy1.ipynb  tab_II_satellite_baselines_indepe.ipynb  tab_II_satellite_complex_signal.ipynb  tab_II_satellite_real_signal.ipynb  tab_II_satellite_real_signal_compressed_avg.ipynb  tab_II_stationary.ipynb  tab_II_stationary_baselines.ipynb  tab_II_stationary_baselines_independent-Copy1.ipynb  tab_II_stationary_baselines_independent.ipynb  tab_I_OG_example.ipynb  tab_I_target_RFI_subtraction.ipynb  tab_I_visibility_correction.ipynb
profiling/: rfi_vis.py
scripts/: complex_rfi_test.py  tab_II_compressed.py  tab_II_numpyro_fft.py  tab_II_numpyro_gp.py  tab_II_numpyro_gp_fft.py  tab_II_numpyro_gp_fft_standard.py  tab_II_numpyro_gp_fft_standard_all.py  (+10 more)
(+12 files in other folders)
