[build-system]
# XXX: If your project needs other packages to build properly, add them to this list.
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"


[project]
name = "tab_opt"
version = "0.0.1"
license = {file = "LICENSE"}
readme = "README.md"
# dynamic = ["version", "readme"]
authors = [{name = "Chris Finlay", email = "christopher.finlay@unige.ch"},]
maintainers = [{name = "Chris Finlay", email = "christopher.finlay@unige.ch"}]
description = "Trajectory based Radio Frequency Interference (RFI) subtraction and calibration using Bayesian methods for radio interferometeric data."
requires-python = ">=3.9,<3.13"
dependencies = ["numpyro", "optax", "chex"]

[project.urls]
# Homepage = "https://example.com"
# Documentation = "https://tabascal.readthedocs.io/en/latest/"
Repository = "https://github.com/chrisfinlay/tab_opt.git"

[tool.setuptools.packages]
find = {}